[gd_scene load_steps=2 format=3 uid="uid://cypespwkot0ak"]

[ext_resource type="Script" uid="uid://bntxtn7xb5qks" path="res://Scripts/ui.gd" id="1_jxero"]

[node name="UI" type="Node2D"]
script = ExtResource("1_jxero")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(1.5, 1.5)
text = "Score: 0"
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="."]
offset_left = 114.0
offset_right = 174.0
offset_bottom = 23.0
scale = Vector2(1.5, 1.5)
text = "Health: 5"
metadata/_edit_use_anchors_ = true

[node name="TimeLabel" type="Label" parent="."]
offset_left = 243.615
offset_right = 313.615
offset_bottom = 23.0
scale = Vector2(1.5, 1.5)
text = "Time: 0"
metadata/_edit_use_anchors_ = true
